--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                             <style>text { font-family: 'Montserrat', sans-serif; font-weight: 300; fill: currentColor; }</style>
                             <text x="0" y="22" font-size="22">L</text>
                             <text x="12" y="22" font-size="22">O</text>
-                            <rect x="32" y="8" width="24" height="12" rx="6" ry="6" fill="none" stroke="currentColor" stroke-width="1.8"/>
+                            <rect x="32" y="7" width="24" height="14" rx="7" ry="7" fill="none" stroke="currentColor" stroke-width="1.8"/>
                             <text x="60" y="22" font-size="22">P</text>
                         </svg>
                     </a>
@@ -1685,7 +1685,8 @@
                 </div>
             </main>
 
-            <footer class="now-playing-bar">
+            <footer class="footer-container">
+                <div class="now-playing-bar">
                 <div class="track-info">
                     <img src="./assets/appicon.png" alt="Current Track Cover" class="cover" />
                     <div class="details">
@@ -1962,6 +1963,7 @@
                         </button>
                     </div>
                 </div>
+            </div>
             </footer>
         </div>
         <script src="https://unpkg.com/@studio-freight/lenis"></script>
